Kubernetes/auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: auth-service
  namespace: ivolve

spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  selector:
    matchLabels:
      app: auth-service

  template:
    metadata:
      labels:
        app: auth-service

    spec:
      containers:
        - name: auth-service
          image: 662371887852.dkr.ecr.us-east-1.amazonaws.com/ivolve-repo:auth-service-3

          ports:
            - containerPort: 5000
