Kubernetes/roadmap-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: roadmap-service
  namespace: ivolve

spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  selector:
    matchLabels:
      app: roadmap-service

  template:
    metadata:
      labels:
        app: roadmap-service

    spec:
      containers:
        - name: roadmap-service
          image: 662371887852.dkr.ecr.us-east-1.amazonaws.com/ivolve-repo:roadmap-service-1

          ports:
            - containerPort: 8080
