Kubernetes/auth-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: auth-service
  namespace: ivolve

spec:
  selector:
    app: auth-service

  ports:
    - port: 5000
      targetPort: 5000

  type: ClusterIP
